samples/_failures_safe/1761193626_362ac0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e755da86.c:180: error: expected ‘;’, ‘,’ or ‘)’ at end of input
